--- a/gb/24/6/7/n14265922.md
+++ b/gb/24/6/7/n14265922.md
@@ -7,9 +7,9 @@
 </h6>
 <hr>
 <p>【大纪元2024年06月07日讯】（大纪元记者徐乃义台湾桃园报导）桃园市副市长王明钜7日出席“国立中央大学EMBA校友会捐赠观音区及新屋区十所国中小学奖助学金典礼”。王明钜表示，感谢中央大学EMBA校友会的伙伴们热心公益，继捐赠市府救护车后，进一步捐赠观音及新屋区10校60万元奖助学金，以及价值20万的文具、玩具供学校作为学生奖励品，为教育奉献心力，盼未来能与中央大学有更多合作机会。</p>
-<figure id="14265924" aria-describedby="caption-14265924" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265924-687338-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14265924-687338-450x300.jpg" alt="中央大学EMBA校友会捐赠60万元奖助学金。" width="500" /></a><figcaption id="caption-14265924" class="wp-caption-text">中央大学EMBA校友会捐赠60万元奖助学金。（桃园市府新闻处 提供）</figcaption></figure>
+<figure id="14265924" aria-describedby="caption-14265924" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265924-687338-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265924-687338-450x300.jpg" alt="中央大学EMBA校友会捐赠60万元奖助学金。" width="500" /></a><figcaption id="caption-14265924" class="wp-caption-text">中央大学EMBA校友会捐赠60万元奖助学金。（桃园市府新闻处 提供）</figcaption></figure>
 <p>国立中央大学副校长许秉瑜表示，中央大学EMBA校友会在黄辉彬理事长带领下，长期热心公益，不但捐赠市府救护车、办理爱心捐血活动，关怀偏乡教育也不遗余力，希望校友会的用心与爱心，让学生都能更踏实的精进学业，努力完成自身的梦想。</p>
-<figure id="14265925" aria-describedby="caption-14265925" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265925-687339-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14265925-687339-450x300.jpg" alt="桃园市副市长王明钜致词。" width="500" /></a><figcaption id="caption-14265925" class="wp-caption-text">桃园市副市长王明钜致词。（桃园市府新闻处 提供）</figcaption></figure>
+<figure id="14265925" aria-describedby="caption-14265925" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265925-687339-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265925-687339-450x300.jpg" alt="桃园市副市长王明钜致词。" width="500" /></a><figcaption id="caption-14265925" class="wp-caption-text">桃园市副市长王明钜致词。（桃园市府新闻处 提供）</figcaption></figure>
 <p>国立中央大学EMBA校友同学会理事长黄辉彬表示，感谢团队所有成员的努力让校友会能为基础教育尽一份力量，每所学校将获得6万的奖助学金及价值2万元的文具、玩具；并将邀请水源村剧团演出反毒戏剧《穿越时空的反毒旅行者》，向学生宣导毒品对自身、家庭、社会的危害，盼能持续为社会及教育奉献心力。</p>
 <p>观音国小校长林翠玲代表观音及新屋区10所学校，感谢中央大学EMBA校友会捐赠奖助学金及文具、玩具，关怀学生的学习，并规划水源村剧团反毒戏剧演出，让剧场走进校园，不但强化反毒教育，也让艺文教育从小扎根。◇</p>
 <p>责任编辑：昌英</p>
@@ -18,37 +18,37 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/20/9/16/n12406978.md#1">京懋及善心人士捐三百万 助学子圆梦</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/27/n13833603.md#1">雪霸处鼓励原住民学生敦品励学 实施奖助学金</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/17/n14096923.md#1">嘉大合作社捐30万元 挹注安心就学奖助学金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265844.md#1">北荣桃园分院附设护理之家 做果粽挂菖莆迎端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265821.md#1">液相层析串联质谱仪（LC/MS/MS） 桃园食安把关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265791.md#1">桃疗药师卫教银发族呼吸道疾病预防保健撇步</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265784.md#1">媲美大学毕业典礼 新兴中小学穿学士袍、拨穗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265256.md#1">唐老鸭90周年 迪士尼水族馆跨界合作就在Xpark</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265261.md#1">宝贝中心举办身障者“新星厨神争霸赛”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310158.md#1">桃园五行政区约17万户  提早半小时完成复水</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310146.md#1">重视职场压力   桃疗：及早求助改善身心状况</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310134.md#1">协助新住民查找友善企业资讯  移民署推职场计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310127.md#1"></a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309685.md#1">桃警跨辖新竹抓人 遭通缉犯开枪打穿右肩逃逸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309623.md#1">警匪枪击案 杨梅员警受伤送联新国际医院救治</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/17/n10403852.md#1" target="_blank">老绥远韩氏：文革阅读经历</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/14/n11044461.md#1" target="_blank">钟声：他们晚年为何忏悔</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258414.md#1">安金藏剖心的一刀 忠义震慑逆乱 挽救了唐朝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14258987.md#1">高智晟律师风骨纪实 韩亦言笔下动人心魄的传奇人物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264723.md#1">【时事金扫描】亲历“六四”见证地狱战场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263982.md#1">【菁英论坛】35年崩而未溃 六四后中国魔变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264734.md#1">【探索时分】乌克兰获重磅军援 瑞典萨博预警机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264460.md#1">传中央巡视组秘查唐山和保定 满大街是警察</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264595.md#1">陷负面传闻 江泽民长子江绵恒职务生变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264453.md#1">山西沁县政协主席被杀 传与拆迁纠纷有关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264874.md#1">范冰冰不再试水温 工作室开通社交平台新账号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264041.md#1">当年为家庭退出娱乐圈 黎姿回应复出传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264149.md#1">大陆演唱遭虫子袭击 张信哲与邓紫棋反应迥异</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264910.md#1">周润发豪宅成陆客打卡点 已故李小龙曾住附近</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263721.md#1">母陈尸顶楼 唐治平一度失联 经纪人代发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260837.md#1">秋葵热量低又营养 教你如何料理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264003.md#1">枕头套比马桶还脏？微生物专家告诉你该多久洗一次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263686.md#1">买不起新鲜蔬果 吃冷冻的也一样健康吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262822.md#1">西瓜皮不要丢 这10种做法让“垃圾”变美食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264509.md#1">什么事不适合用简讯传达？ 礼仪专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310055.md#1">【新闻看点】张又侠表忠是求饶 秦刚再见不到？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309753.md#1">【新闻大家谈】惊天案：央企卖尸体 党媒造反？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/7/n14265922.htm">中央大学EMBA校友会捐赠10校奖助学金</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265922.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
