--- a/gb/24/6/17/n14271716.md
+++ b/gb/24/6/17/n14271716.md
@@ -7,14 +7,14 @@
 </h6>
 <hr>
 <p>【大纪元2024年06月17日讯】（大纪元记者徐乃义台湾桃园报导）暑假即将到来，还没想好带孩子去哪里玩吗？一起到桃园青埔“巧虎梦想乐园”与小孩界的巨星巧虎、琪琪度过欢乐的暑假吧。巧虎梦想乐园中最受小朋友欢迎的“欢乐派对秀”推出一大一小超值套票组合二选一，专案含乐园独家商品“巧虎12色铅笔”或“凉逸夏冰品”，活动中还有巧虎及琪琪与小朋友唱唱跳跳，留下美好回忆，儿童票加价可在舞台与巧虎及琪琪近距离接触，详情请洽（03） 273-7220。</p>
-<figure id="14271721" aria-describedby="caption-14271721" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271721-689294-450x239.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14271721-689294-450x239.jpg" alt="妙妙未来实验室，可让亲子在此体验科技数位互动，训练逻辑思考。" width="500" /></a><figcaption id="caption-14271721" class="wp-caption-text">妙妙未来实验室，可让亲子在此体验科技数位互动，训练逻辑思考。（巧虎梦想乐园提供）</figcaption></figure>
-<figure id="14271717" aria-describedby="caption-14271717" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271717-689290-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14271717-689290-450x300.jpg" alt="以探索海洋为主题的“巧虎梦想乐园”是全台第一个“有故事”的室内游乐园。" width="500" /></a><figcaption id="caption-14271717" class="wp-caption-text">以探索海洋为主题的“巧虎梦想乐园”是全台第一个“有故事”的室内游乐园。（巧虎梦想乐园提供）</figcaption></figure>
+<figure id="14271721" aria-describedby="caption-14271721" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271721-689294-450x239.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14271721-689294-450x239.jpg" alt="妙妙未来实验室，可让亲子在此体验科技数位互动，训练逻辑思考。" width="500" /></a><figcaption id="caption-14271721" class="wp-caption-text">妙妙未来实验室，可让亲子在此体验科技数位互动，训练逻辑思考。（巧虎梦想乐园提供）</figcaption></figure>
+<figure id="14271717" aria-describedby="caption-14271717" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271717-689290-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14271717-689290-450x300.jpg" alt="以探索海洋为主题的“巧虎梦想乐园”是全台第一个“有故事”的室内游乐园。" width="500" /></a><figcaption id="caption-14271717" class="wp-caption-text">以探索海洋为主题的“巧虎梦想乐园”是全台第一个“有故事”的室内游乐园。（巧虎梦想乐园提供）</figcaption></figure>
 <p>全台首家巧虎梦想乐园，以探索海洋为主题，五大场域融合了六大教育目标：体能发展、美感教育、认知启蒙、创意启发、社会学习、科学发现，孩子们可在乐园尽情跑跳，动脑体验。“巧虎缤纷大球池”里的迷宫乐园、潜艇梦想号、冒险球池等多达10种游乐项目，让孩子们玩到不亦乐乎；“琪琪梦想体验城”提供多种职业体验如花店老板、冰淇淋店长和加油站长，进行多项职涯探索。</p>
-<figure id="14271718" aria-describedby="caption-14271718" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271718-689291-450x269.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14271718-689291-450x269.jpg" alt="琪琪梦想体验城发掘您的志趣。" width="500" /></a><figcaption id="caption-14271718" class="wp-caption-text">琪琪梦想体验城发掘您的志趣。（巧虎梦想乐园提供）</figcaption></figure>
+<figure id="14271718" aria-describedby="caption-14271718" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271718-689291-450x269.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14271718-689291-450x269.jpg" alt="琪琪梦想体验城发掘您的志趣。" width="500" /></a><figcaption id="caption-14271718" class="wp-caption-text">琪琪梦想体验城发掘您的志趣。（巧虎梦想乐园提供）</figcaption></figure>
 <p>游戏区”有攀岩、画布积木，让孩子发挥组合与创造的能力，而“妙妙未来实验室”的足球机器人、魔法实验室等游戏，可让亲子在此体验科技数位互动，训练逻辑思考。巧虎梦想乐园里的各种游戏区，不只提供安全欢乐的游戏场域，更提升孩子学习的动机。</p>
-<figure id="14271720" aria-describedby="caption-14271720" style="width: 351px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271720-689293-450x465.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2024/06/id14271720-689293-450x465.jpg" alt="全台首家巧虎梦想乐园，以探索海洋为主题，五大场域融合了六大教育目标，孩子们可在乐园尽情跑跳，动脑体验。" width="351" b="363" /></a><figcaption id="caption-14271720" class="wp-caption-text">全台首家巧虎梦想乐园，以探索海洋为主题，五大场域融合了六大教育目标，孩子们可在乐园尽情跑跳，动脑体验。（巧虎梦想乐园提供）</figcaption></figure>
+<figure id="14271720" aria-describedby="caption-14271720" style="width: 351px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271720-689293-450x465.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/06/id14271720-689293-450x465.jpg" alt="全台首家巧虎梦想乐园，以探索海洋为主题，五大场域融合了六大教育目标，孩子们可在乐园尽情跑跳，动脑体验。" width="351" b="363" /></a><figcaption id="caption-14271720" class="wp-caption-text">全台首家巧虎梦想乐园，以探索海洋为主题，五大场域融合了六大教育目标，孩子们可在乐园尽情跑跳，动脑体验。（巧虎梦想乐园提供）</figcaption></figure>
 <p>最受小朋友欢迎的“海洋世界舞台”每月都会邀请幼教专家规划不同的主题剧场活动，如“故事船长”是由剧场哥哥、姊姊说故事给小朋友听，让孩子在充满童趣的故事中体会人物、场景与语言的运用，也能培养智能、自信与好品格。</p>
-<figure id="14271722" aria-describedby="caption-14271722" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271722-689295-450x296.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14271722-689295-450x296.jpg" alt="海洋世界舞台培养智能、自信与好品格。" width="500" /></a><figcaption id="caption-14271722" class="wp-caption-text">海洋世界舞台培养智能、自信与好品格。（巧虎梦想乐园提供）</figcaption></figure>
+<figure id="14271722" aria-describedby="caption-14271722" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14271722-689295-450x296.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14271722-689295-450x296.jpg" alt="海洋世界舞台培养智能、自信与好品格。" width="500" /></a><figcaption id="caption-14271722" class="wp-caption-text">海洋世界舞台培养智能、自信与好品格。（巧虎梦想乐园提供）</figcaption></figure>
 <p>“海洋动滋动”姊姊们在舞蹈分解教学，跟着巧虎及琪琪的投影片，一起在海洋世界舞台动动身体；还有“海洋派对秀”，孩子可随着巧虎以及每次不同主题故事所编曲的音乐，一起和小朋友唱唱跳跳，享受近距离的接触。还有每月最受欢迎的“小寿星生日会”，当月小寿星可与巧虎一同装饰大型玩偶蛋糕，唱跳生日祝福，完成关卡小游戏更可获造型小蛋糕，儿童门票加价380元就可与巧虎一起庆生，超级欢乐。</p>
 <p>详情请洽巧虎梦想乐园官网：<ahref="https://www.chiaohu-wonderland.com/" target="_blank" rel="noopener noreferrer">https://www.chiaohu-wonderland.com/</a></p>
 <p>乐园地址：桃园市中坜区春德路103号1楼（置地广场桃园），洽询专线：03-2737220◇</p>
@@ -25,36 +25,36 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/30/n13197869.md#1">国旅券松绑 可用于住宿、游乐园</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/17/n13931918.md#1">真人版《小美人鱼》新预告片 呈现美丽海洋世界</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/8/n14069632.md#1">响应国际失智月 苗县府与大千医院打造怀旧游乐园</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271723.md#1">毛经济宠上天 醒吾科大宠物烘焙师职业技能大赛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271678.md#1">马祖旅台艺术家桃园联展 同频共鸣艺术飨宴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271702.md#1">全球专题探究赛 中原大学激发台马高中生新思维</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271674.md#1">桃园在地化可即性的长照服务 偏乡服务零距离</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271670.md#1">桃疗精神复健机构负责人与专业人员进阶训练</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310127.md#1"></a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309685.md#1">桃警跨辖新竹抓人 遭通缉犯开枪打穿右肩逃逸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309623.md#1">警匪枪击案 杨梅员警受伤送联新国际医院救治</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309626.md#1">杨注胜捐赠桃园市政府消防局救护车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309610.md#1">景福宫中元文化活动将登场 艺术延续传统文化</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/3/n11232692.md#1" target="_blank">林辉：为延安贩卖鸦片的毒贩死前缘何喊冤？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268821.md#1">濒死游历天堂 英女透露人类将有大事发生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266607.md#1">端午节吃粽子起源不因纪念屈原？一起来揭谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/27/n14167911.md#1">一段婆媳情让她人生遇转机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267369.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（上）活捉外星人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269975.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（下）医院惊魂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270948.md#1">【新闻五人行】G7批中俄 美欧对中共祭出大招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270586.md#1">【菁英论坛】一线城市楼市也崩 上亿房主成负翁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270710.md#1">【时事金扫描】泽连斯基G7之旅三大收获</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269870.md#1">“一带一路”为马来西亚留下“鬼城”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270188.md#1">组图：搞笑宠物摄影奖出炉 钻猫洞的狗夺冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269961.md#1">【新闻五人行】美爆“地狱计划”吓坏中南海</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269948.md#1">收到中共邀约拍统战片 台女星何以奇秒拒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269859.md#1">低调访台受瞩目 胡歌“陪产剪脐带”登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270666.md#1">分享80多岁外婆抗癌成功 白家绮直言一治愈要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270543.md#1">古天乐欠债830万不还？被提告原因遭质疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270562.md#1">中共收买台湾艺人发统战文 终极目标被揭露</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270016.md#1">护理师提醒：人年过50 少补充一种维生素</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270231.md#1">如何延长玫瑰的开花时间？ 让专家告诉你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262442.md#1">寒湿重易生病 中医授怎样吃避免寒从口入</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269880.md#1">加国亚省班芙公园梦莲湖 上榜世界最美湖泊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262443.md#1">中医师：爱吃水果易致寒湿体质 三类人宜戒口</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310055.md#1">【新闻看点】张又侠表忠是求饶 秦刚再见不到？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309753.md#1">【新闻大家谈】惊天案：央企卖尸体 党媒造反？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/17/n14271716.htm">全台首家“巧虎梦想乐园” 超High体验五大场区</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271716.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
